# aer

./: .env.example  .gitignore  Guardium_MSSQL_local_user_listing.txt  Snowflake CISO Security Analysis — Engli  Snowflake Sandbox Access Checklist — Sec.md  \  access_review.ipynb  access_review.json  access_review_01-08-3.ipynb  access_review_01-12.ipynb  access_review_01-12.json  access_review_01-19.ipynb  access_review_01-19.json  access_review_0108-2.ipynb  access_review_0108.ipynb  access_review_create_01-20.ipynb  access_review_create_01-20.json  access_review_create_01-28.json  access_review_create_01-29.json  access_review_report_01-21.ipynb  access_review_report_01-21.json  access_review_report_01-21_2.ipynb  access_review_report_01-21_2.json  access_review_share_01-28.json  access_review_v3.json  aer_bot.py  aer_cache.json  aer_manual_notes.json  aer_report_01-21.json  aer_report_01-28.json  appsec.md  celerybeat-schedule.db  cell1.txt  cell2.txt  cell4.txt  cell5.txt  cell6.txt  create_test_files.py  debug_ui_issue.py  excel-splitter.py  (+6 more)
.github/: CODEOWNERS  coderabbit.yaml  dependabot.yml  pull_request_template.md
REVIEW-CREATE/: AER_v7.5_COMPLETE.ipynb  CELL_2_STAGE2_JUPYTER.py  CELL_2_STAGE2_v8.1.py  CELL_3_STAGE3_COMPLETE.py  README.md  SPEC.md  STAGE2_VALIDATION_IMPLEMENT_PLAN.md  VALIDATION_REPORT.md  WORKFLOW.md  access_review_create_01-29.json  access_review_create_01-31.json  (+15 more)
powerdocu/: .gitignore  README.md  powerdocu_notebook.ipynb  powerdocu_notebook.py  pyproject.toml
powerdocu/tests/: conftest.py  test_notebook_api.py  test_notebook_smoke.py
(+108 files in other folders)
