[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "powerdocu-notebook"
version = "0.1.0"
description = "A pure Python notebook implementation of key PowerDocu app and flow documentation workflows."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2",
]

[project.optional-dependencies]
dev = [
  "ipykernel>=6.29",
  "jupytext>=1.16",
  "nbclient>=0.10",
  "nbformat>=5.10",
  "pytest>=8.4",
]

[tool.setuptools]
py-modules = ["powerdocu_notebook"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
